--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -14,5 +14,6 @@
   "notes.form.title": "Title",
   "notes.form.title_placeholder": "New note title",
   "notes.form.create": "Create",
-  "notes.create.title": "Create a new note"
+  "notes.create.title": "Create a new note",
+  "new.key3": "PhraseApp test 3"
 }
