Updated translations from Phrase
Updated locale file cs.json
Updated locale file cs.json
Updated locale file en.json
Updated locale file en.json

--- a/src/locale/cs.json
+++ b/src/locale/cs.json
@@ -1,21 +1,22 @@
 {
-  "common.button.back": "Zpět",
-  "language.switch": "Změnit jazyk",
-  "language.czech": "Česky",
-  "language.english": "Anglicky",
-  "modal.remove_note.title": "Odstranit poznámku",
-  "modal.remove_note.body": "Opravdu si přejete odstranit poznámku #{id}.",
-  "modal.remove_note.close": "Zrušit",
-  "modal.remove_note.remove": "Odstranit",
-  "notes.list.title": "Seznam poznámek",
-  "notes.list.edit": "Upravit poznámku",
-  "notes.list.remove": "Smazat poznámku",
-  "notes.list_table.columns.title": "Název",
-  "notes.form.title": "Název",
-  "notes.form.title_placeholder": "Název nové poznámky",
-  "notes.form.create": "Vytvořit",
-  "notes.create.title": "Vytvořit poznámku",
-  "notes.create.body": "Obsah poznámky",
-  "new.key1": "PhraseApp test 1",
-  "new.key2": "PhraseApp test 2"
+  "common.button.back": "Back",
+  "language.czech": "Czech",
+  "language.english": "English",
+  "language.switch": "Switch language",
+  "modal.remove_note.body": "Are you sure you want to remove note #{id}.",
+  "modal.remove_note.close": "Close",
+  "modal.remove_note.remove": "Remove",
+  "modal.remove_note.title": "Remove Note",
+  "new.key1": "Translated key 1",
+  "new.key2": "Translated key 2",
+  "new.key3": "PhraseApp test 3",
+  "notes.create.body": "Note body",
+  "notes.create.title": "Create a new note",
+  "notes.form.create": "Create",
+  "notes.form.title": "Title",
+  "notes.form.title_placeholder": "New note title",
+  "notes.list.edit": "Edit note",
+  "notes.list.remove": "Remove note",
+  "notes.list.title": "List of notes",
+  "notes.list_table.columns.title": "Title"
 }
