add test strings

--- a/src/locale/cs.json
+++ b/src/locale/cs.json
@@ -17,5 +17,6 @@
   "notes.create.title": "Vytvořit poznámku",
   "notes.create.body": "Obsah poznámky",
   "new.key1": "PhraseApp test 1",
-  "new.key2": "PhraseApp test 2"
+  "new.key2": "PhraseApp test 2",
+  "new.key4": "PhraseApp test 4"
 }
