--- a/src/locale/cs.json
+++ b/src/locale/cs.json
@@ -1,22 +1,23 @@
 {
-  "common.button.back": "Zpět",
-  "language.switch": "Změnit jazyk",
-  "language.czech": "Česky",
-  "language.english": "Anglicky",
-  "modal.remove_note.title": "Odstranit poznámku",
-  "modal.remove_note.body": "Opravdu si přejete odstranit poznámku #{id}.",
-  "modal.remove_note.close": "Zrušit",
-  "modal.remove_note.remove": "Odstranit",
-  "notes.list.title": "Seznam poznámek",
-  "notes.list.edit": "Upravit poznámku",
-  "notes.list.remove": "Smazat poznámku",
-  "notes.list_table.columns.title": "Název",
-  "notes.form.title": "Název",
-  "notes.form.title_placeholder": "Název nové poznámky",
-  "notes.form.create": "Vytvořit",
-  "notes.create.title": "Vytvořit poznámku",
-  "notes.create.body": "Obsah poznámky",
-  "new.key1": "PhraseApp test 1",
-  "new.key2": "PhraseApp test 2",
-  "new.key4": "PhraseApp test 4"
+    "common.button.back": "Zpět",
+    "language.switch": "Změnit jazyk",
+    "language.czech": "Česky",
+    "language.english": "Anglicky",
+    "modal.remove_note.title": "Odstranit poznámku",
+    "modal.remove_note.body": "Opravdu si přejete odstranit poznámku #{id}.",
+    "modal.remove_note.close": "Zrušit",
+    "modal.remove_note.remove": "Odstranit",
+    "notes.list.title": "Seznam poznámek",
+    "notes.list.edit": "Upravit poznámku",
+    "notes.list.remove": "Smazat poznámku",
+    "notes.list_table.columns.title": "Název",
+    "notes.form.title": "Název",
+    "notes.form.title_placeholder": "Název nové poznámky",
+    "notes.form.create": "Vytvořit",
+    "notes.create.title": "Vytvořit poznámku",
+    "new.key3": "",
+    "notes.create.body": "Obsah poznámky",
+    "new.key1": "PhraseApp test 1",
+    "new.key2": "PhraseApp test 2",
+    "new.key4": "PhraseApp test 4"
 }
