--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -18,6 +18,7 @@
     "new.key3": "PhraseApp test 3",
     "notes.create.body": "",
     "new.key1": "",
-    "new.key2": "PhraseApp test 2",
-    "new.key4": "PhraseApp test 4"
+    "new.key2": "Lokalise test 2",
+    "new.key3": "Lokalise test 3",
+    "new.key4": "Lokalise test 4"
 }
