--- a/src/locale/cs.json
+++ b/src/locale/cs.json
@@ -19,5 +19,6 @@
     "notes.create.body": "Obsah poznámky",
     "new.key1": "PhraseApp test 1",
     "new.key2": "PhraseApp test 2",
-    "new.key4": "PhraseApp test 4"
+    "new.key4": "PhraseApp test 4",
+    "new.key5": "Lokalise test 5 CZ"
 }
