--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -15,8 +15,10 @@
     "notes.form.title_placeholder": "New note title",
     "notes.form.create": "Create",
     "notes.create.title": "Create a new note",
+    "new.key3": "PhraseApp test 3",
     "notes.create.body": "",
-    "new.key3": "Lokalise test 3",
-    "new.key4": "Lokalise test 4",
+    "new.key1": "",
+    "new.key2": "PhraseApp test 2",
+    "new.key4": "PhraseApp test 4",
     "new.key5": "Lokalise test 5"
 }
